--- a/index.html
+++ b/index.html
@@ -10,6 +10,162 @@
   </head>
 
   <body>
-    <!-- write some HTML! -->
+
+    
+    <header>
+        <img class="logo" src="imgs/logo.svg" alt="logo" />
+        <nav class="nav">
+          <ul class="nav_links">
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Advantages</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Products</a>
+              <div class="drop">
+                <ul>
+                  <li><a href="#">Amazing</a></li>
+                  <li><a href="#">Amazing</a></li>
+                  <li><a href="#">Amazing</a></li>
+                </ul>
+              </div>
+            </li>
+            <img class="menu" src="imgs/menu.svg" alt="menu"/>
+      </nav>
+    </header>
+
+
+    <container class="introduction">
+      <div class="centerpiece">
+          <div class="bothhalves">
+        <div class="lefthalf">Introducing Falcon 9</div>
+        <div class="righthalf">
+          <h2>We make dreams come true</h2>
+          <div class="bottomtext">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ea perspiciatis accusamus ducimus, eaque dignissimos in, impedit minus vel labore pariatur debitis, exercitationem obcaecati voluptatum tempore facilis officiis aliquam delectus!</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque accusamus sed culpa repudiandae quaerat error iure ut quas? Placeat inventore magnam quae culpa, amet fugit fugiat eveniet iste beatae accusamus.</p></div>
+          </div>
+        </div>
+        </div>
+      </container>
+
+    <container class="blocks">
+      <div class="block">
+        <img src="imgs/icon1.svg" alt="icon"/>
+        <h3>
+          Amazing feature 1
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, adipisci vero eos iste nihil distinctio unde nobis voluptatum dolorem cum magnam recusandae, sunt laudantium necessitatibus id. Aliquid cupiditate aperiam dolore?
+        </p>
+        <button>
+          Get it
+        </button>
+      </div>
+
+      <div class="block">
+        <img src="imgs/icon2.svg" alt="icon"/>
+        <h3>
+          Amazing feature 2
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet. Officiis veritatis cum enim dolores amet, possimus voluptate magnam, quisquam velit ut magni suscipit alias modi nesciunt. Aut voluptate nobis eos id.
+        </p>
+        <button>
+          Sell it
+        </button>
+      </div>
+
+      <div class="block">
+      <img src="imgs/icon3.svg" alt="icon"/>
+      <h3>
+        Amazing feature 3
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur veritatis magnam minus quas in rerum dolores necessitatibus amet similique iusto. Saepe eveniet fugiat iste sint ullam dicta sit necessitatibus minima?
+      </p>
+      <button>
+        Do it
+      </button>
+    </div>
+    </container>
+    
+    <container class="squares">
+      <div class="top">
+        <h2 class="htop">
+          Some cool text
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet vel neque natus a consequatur libero, minus exercitationem quam consectetur, quaerat qui illum?
+        </p>
+        <div class="front">
+          <h3 class="hfront">
+            This looks cool
+          </h3>
+          <p2>
+            Hover me if you like random animations
+          </p2>
+        </div>
+      </div>
+      <div class="bottom">
+        <h2 class="hbottom">
+          Slick gradient
+        </h2>
+        <p>
+          Lorem ipsum?
+        </p>
+      </div>
+    </container>
+
+    <div class="pics">
+      <img src="imgs/tesla.jpg" alt="vroom">
+      <img src="imgs/procat.jpg" alt="grump">
+      <img src="imgs/hyperloop.jpg" alt="tube">
+      <img src="imgs/sneakycat.jpg" alt="sneaky">
+      <img src="imgs/falconrocket.jpeg" alt="rocket">
+      <img src="imgs/funnycat.jpg" alt="wow">
+    </div>
+
+  <form>
+    <div class="mail">
+    <label>
+      Register to our mailing list:
+    </label>
+    </div>
+    <div class="box">
+    <Input type="email" required/>
+    </div>
+    <div class="send">
+    <input type="checkbox" id="scales" name="scales"/>
+    <label for="scales">send me daily cat pictures</label>
+    </div>
+  </form>
+
+<footer>
+  <div class="legal-cont">
+  <ul class="legal">
+    <li class="legal-item"><a href="#">About us</a></li>
+    <li class="legal-item"><a href="#">Privacy Policy</a></li>
+    <li class="legal-item"><a href="#">Legal notes</a></li>
+    <li class="legal-item"><a href="#">Copyright</a></li>
+  </ul>
+  <ul class="legal">
+    <li class="legal-item"><a href="#">About us</a></li>
+    <li class="legal-item"><a href="#">Privacy Policy</a></li>
+    <li class="legal-item"><a href="#">Legal notes</a></li>
+    <li class="legal-item"><a href="#">Copyright</a></li>
+  </ul>
+  <ul class="legal">
+    <li class="legal-item"><a href="#">About us</a></li>
+    <li class="legal-item"><a href="#">Privacy Policy</a></li>
+    <li class="legal-item"><a href="#">Legal Notes</a></li>
+    <li class="legal-item"><a href="#">Copyright</a></li>
+  </ul>
+  <ul class="legal">
+    <li class="legal-item"><a href="#">About us</a></li>
+    <li class="legal-item"><a href="#">Privacy Policy</a></li>
+    <li class="legal-item"><a href="#">Legal notes</a></li>
+    <li class="legal-item"><a href="#">Copyright</a></li>
+  </ul>
+</div>
+</footer>
   </body>
 </html>
